<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginSignupPage">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="486dp"
        android:background="@drawable/ola2"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_readme"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="56dp"
            android:foregroundGravity="bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/buho" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="394dp"
            android:layout_height="38dp"


            android:text="@string/splash_titulo"
            android:textAlignment="center"

            android:textColor="@color/T2_Azul_Oscuro"


            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_readme"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="397dp"
            android:layout_height="34dp"
            android:text="@string/login_signup_subtitulo"

            android:textAlignment="center"
            android:textColor="@color/T2_Morado"
            android:textSize="15dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnAtras"
        android:layout_width="288dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_signup_boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <TextView
        android:id="@+id/txtIngresar"
        android:layout_width="0dp"
        android:layout_height="19dp"

        android:text="@string/login_signup_subtitulo2"

        android:textAlignment="center"
        android:textColor="@color/naranjo_oscuro_barra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAtras"
        app:layout_constraintVertical_bias="0.123" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />


</androidx.constraintlayout.widget.ConstraintLayout>