<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.HomePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="386dp"
        android:layout_height="278dp"
        android:background="@drawable/fondo_tarjeta"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="2dp">

        <TableLayout
            android:layout_width="336dp"
            android:layout_height="202dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_titulo_saldo"
                    android:layout_width="290dp"
                    android:layout_height="28dp"
                    android:text="@string/home_subtitulo1"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="216dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_usuario"
                    android:layout_width="273dp"
                    android:layout_height="match_parent"

                    android:text="@string/home_txt_usuario"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/imgProfile"

                    android:layout_width="wrap_content"
                    app:srcCompat="@drawable/profile_picture" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="90dp">

                <TextView
                    android:id="@+id/txt_saldo"
                    android:layout_width="296dp"
                    android:layout_height="85dp"

                    android:gravity="center_horizontal|center_vertical"
                    android:text="$124.57"

                    android:textColor="@color/white"
                    android:textSize="60sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_subtitulo_saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/home_subtitulo2"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="97dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="53dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/notifications_icon" />
            </TableRow>


        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnEnvia"
        android:layout_width="178dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/T2_Azul_Claro"
        android:text="@string/home_boton_Enviar"
        app:icon="@drawable/send_icon"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toStartOf="@+id/btn_ingresa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <Button
        android:id="@+id/btn_ingresa"
        android:layout_width="178dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/T2_Morado_Claro"
        android:text="@string/home_boton_Ingresar"
        app:icon="@drawable/request_icon"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEnvia"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mirecycler"
        android:layout_width="370dp"
        android:layout_height="398dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtTrans"
        android:layout_width="365dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="8dp"
        android:text="@string/home_txt_transaccion"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46716234" />


</androidx.constraintlayout.widget.ConstraintLayout>
